# particle_conversion

./: .gitignore  CITATION.cff  LICENSE.md  README.md  output_base.toml  pyproject.toml
.github/workflows/: python-package-poetry.yml
LICENSES/: MIT.txt
config/: base.toml  inj.toml  multirun.toml
docs/: config_docu.md  conversion_models.md
docs/exampledata/: co2_2x.xy  inj_gas_ch4.xy  inj_gas_co.xy  inj_gas_co2.xy  inj_gas_h2.xy  inj_gas_h2o.xy  inj_gas_n2.xy  inj_gas_n2.xy.license  inj_gas_o2.xy  inj_gas_temp.xy  inj_p_Re.xy  inj_p_law.xy  inj_p_mass.xy  inj_p_temp.xy  temp_2x.xy
particle_conversion/: __init__.py  __main__.py  cli.py  constants.py  default_parameters.py  utils.py
particle_conversion/analysis/: analysis_balance.py  analysis_carbonX.py  analysis_zeroD.py
particle_conversion/models/: diffusion.py  particle.py  solver_zeroDim_reactor.py  surfacepressure.py  zeroDim_reactor.py
tests/: test_diffusion.py
